[core] :bug: NumberUtils: rewrite mapping utilities and prevent NaN/Infinite results
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>